--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -31,15 +31,15 @@
     </div>
 </header>
     
-    <!-- Hero Section -->
-    <section id="inicio" class="hero">
-        <div class="hero-content">
-            <h1>PRENDAS <span class="neon-accent">EXCLUSIVAS</span></h1>
-            <p class="neon-accent text-glow">Ediciones limitadas • Auténticos • Envíos a todo el país  • Barato y de Calidad</p>
-            <a href="catalogo.html"> class="cta-button">VER COLECCIÓN</a>
-        </div>
-    </section>
-
+<!-- Hero Section -->
+<section id="inicio" class="hero">
+    <div class="hero-content">
+        <h1>PRENDAS <span class="neon-accent">EXCLUSIVAS</span></h1>
+        <p class="neon-accent text-glow">Ediciones limitadas • Auténticos • Envíos a todo el país • Barato y de Calidad</p>
+        <a href="catalogo.html" class="cta-button">VER CATALOGO</a>
+    </div>
+</section>
+    
  <!-- Ofertas Únicas -->
 <section id="ofertas" class="products">
     <h2 class="section-title"><span class="blue-accent">OFERTAS</span> <span class="text-light">ÚNICAS</span></h2>
