--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="product-card">
             <span class="tag-discount">20% OFF</span>
             <div class="product-image-container">
-                <img src="assets/products/cuellito-lycra.jpg" alt="Cuellitos de Lycra Frizada" class="product-image">
+                <img src="Cuellito.jpeg" alt="Cuellos de Lycra Frizada" class="product-image">
             </div>
             <div class="product-info">
                 <h3>Cuellos de Lycra Frizada</h3>
