--- a/catalogo.html
+++ b/catalogo.html
@@ -59,13 +59,17 @@
                 </div>
             </div>
             
-            <div class="filter-options">
-                <button class="filter-btn active" data-filter="all">Todo</button>
-                <button class="filter-btn" data-filter="sneakers">Zapatillas</button>
-                <button class="filter-btn" data-filter="ropa">Ropa</button>
-                <button class="filter-btn" data-filter="accesorios">Accesorios</button>
-                <button class="filter-btn" data-filter="ofertas">Ofertas</button>
-            </div>
+           <div class="filter-options">
+    <button class="filter-btn active" data-filter="all">Todo</button>
+    <button class="filter-btn" data-filter="sneakers">Zapatillas</button>
+    <button class="filter-btn" data-filter="ropa">Ropa</button>
+    <button class="filter-btn" data-filter="accesorios">Accesorios</button>
+    <button class="filter-btn" data-filter="ofertas">Ofertas</button>
+    <button class="filter-btn" data-filter="hombre">Hombre</button>
+    <button class="filter-btn" data-filter="mujer">Mujer</button>
+    <button class="filter-btn" data-filter="deportivo">Deportivo</button>
+    <button class="filter-btn" data-filter="salir">Para Salir</button>
+</div>
         </div>
     </section>
 
