--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
     <div class="hero-content">
         <h1>PRENDAS <span class="neon-accent">EXCLUSIVAS</span></h1>
         <p class="neon-accent text-glow">Ediciones limitadas • Auténticos • Envíos a todo el país • Barato y de Calidad</p>
-        <a href="catalogo.html" class="cta-button">VER CATALOGO</a>
+        <div class="hero-buttons">
+            <a href="catalogo.html" class="cta-button">VER CATALOGO</a>
+            <a href="encargos.html" class="cta-button cta-button-secondary">HACER ENCARGO</a>
+        </div>
     </div>
 </section>
     
