--- a/catalogo.html
+++ b/catalogo.html
@@ -19,12 +19,13 @@
             <img src="GuzzoCorp.png" alt="GUZZOCORP" class="logo">
             <span class="logo-text">GUZZO CORPORATION</span>
         </div>
-        <nav>
-            <a href="index.html"><i class="fas fa-home"></i> Inicio</a>
-            <a href="catalogo.html"><i class="fas fa-search"></i> Catálogo</a>
-            <a href="index.html#encargos"><i class="fas fa-star"></i> Encargos</a>
-            <a href="index.html#contacto"><i class="fas fa-envelope"></i> Contacto</a>
-        </nav>
+<nav>
+    <a href="inicio.html"><i class="fas fa-home"></i> Inicio</a>
+    <a href="index.html"><i class="fas fa-tshirt"></i> Tienda</a>
+    <a href="catalogo.html"><i class="fas fa-search"></i> Catálogo</a>
+    <a href="encargos.html"><i class="fas fa-star"></i> Encargos</a>
+    <a href="#contacto"><i class="fas fa-envelope"></i> Contacto</a>
+</nav>
         <div class="mobile-menu-btn">
             <i class="fas fa-bars"></i>
         </div>
