--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <p class="price">$14.999</p>
                 </div>
                 <p class="size">Talles: S, M, L, XL</p>
-<!-- En index.html, cambia todos los botones de WhatsApp por esto -->
+<!-- Cambia los botones de compra por esto -->
 <button class="whatsapp-btn" onclick="window.location.href='personalizar-compra.html?producto=${product.id}'">
     <i class="fas fa-shopping-cart"></i> COMPRAR
 </button>
