--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </div>
                 <p class="size">Talles: S, M, L, XL</p>
 <!-- Cambia los botones de compra por esto -->
-<button class="cta-button" onclick="window.location.href='personalizar-compra.html?producto=ID_DEL_PRODUCTO'">
+<button onclick="window.location.href='personalizar-compra.html?producto=1'" class="btn-comprar">
     <i class="fas fa-shopping-cart"></i> COMPRAR
 </button>
             </div>
@@ -82,7 +82,7 @@
                 </div>
                 <p class="size">Ajustable</p>
 <!-- En index.html, cambia todos los botones de WhatsApp por esto -->
-<button class="cta-button" onclick="window.location.href='personalizar-compra.html?producto=ID_DEL_PRODUCTO'">
+<button onclick="window.location.href='personalizar-compra.html?producto=2'" class="btn-comprar">
     <i class="fas fa-shopping-cart"></i> COMPRAR
 </button>
             </div>
