--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -76,7 +76,7 @@
         function obtenerProducto(id) {
             // Esta función debe coincidir con los IDs de catalog.js
             const productos = {
-                1: { name: "Remera Térmica", price: 14999, image: "Termica.jpeg", sizes: ["S", "M", "L", "XL"], colors: ["Negro", "Blanco"] },
+                1: { name: "Remera Térmica", price: 14999, image: "Termica.jpeg", sizes: ["S", "M", "L", "XL", "XXL"], colors: ["Negro"] },
                 2: { name: "Gorra", price: 24999, image: "Gorras.jpeg", sizes: ["Único"], colors: ["Negro", "Azul"] },
                 // Añade todos los productos con sus IDs correspondientes
             };
