--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
+    <header>
+            <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <div class="logo-container">
+        <img src="GuzzoCorp.png" alt="GUZZOCORP" class="logo">
     <title>Personalizar Compra - GUZZOCORP</title>
-    <link rel="stylesheet" href="styles.css">
+    </div>
+<nav>
+    <a href="inicio.html"><i class="fas fa-home"></i> Inicio</a>
+    <a href="index.html"><i class="fas fa-tshirt"></i> Tienda</a>
+    <a href="catalogo.html"><i class="fas fa-search"></i> Catálogo</a>
+    <a href="encargos.html"><i class="fas fa-star"></i> Encargos</a>
+    <a href="#contacto"><i class="fas fa-envelope"></i> Contacto</a>
+</nav>
+    <div class="mobile-menu-btn">
+        <i class="fas fa-bars"></i>
+    </div>
+            <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-</head>
+
+</header>
 <body>
     <div class="personalizar-container">
         <h1>Personaliza tu compra</h1>
@@ -165,5 +179,26 @@
             `;
         }
     </script>
+    <footer>
+    <div class="footer-logo-container">
+        <img src="GuzzoCorp.png" alt="GUZZOCORP" class="footer-logo">
+        <span class="footer-logo-text">THE BEST STYLE</span>
+    </div>
+    <div class="footer-links">
+        <a href="#inicio">Inicio</a>
+        <a href="#sneakers">Sneakers</a>
+        <a href="#ropa">Ropa</a>
+        <a href="#encargos">Encargos</a>
+        <a href="#contacto">Contacto</a>
+    </div>
+    <div class="social-links">
+        <a href="https://www.instagram.com/guzzo.corp" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://wa.me/5492664633010" target="_blank"><i class="fab fa-whatsapp"></i></a>
+        <a href="mailto:guzzoinbusiness@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+    </div>
+    <div class="copyright">
+        &copy; 2025 GUZZOCORP - Todos los derechos reservados - By: Nahuel Guzzo
+    </div>
+</footer>
 </body>
 </html>
