--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -9,20 +9,21 @@
 </head>
 <body>
     <header>
-        <div class="logo-container">
-            <img src="GuzzoCorp.png" alt="GUZZOCORP" class="logo">
-        </div>
-        <nav>
-            <a href="inicio.html"><i class="fas fa-home"></i> Inicio</a>
-            <a href="index.html"><i class="fas fa-tshirt"></i> Tienda</a>
-            <a href="catalogo.html"><i class="fas fa-search"></i> Catálogo</a>
-            <a href="encargos.html"><i class="fas fa-star"></i> Encargos</a>
-            <a href="#contacto"><i class="fas fa-envelope"></i> Contacto</a>
-        </nav>
-        <div class="mobile-menu-btn">
-            <i class="fas fa-bars"></i>
-        </div>
-    </header>
+    <div class="logo-container">
+        <img src="GuzzoCorp.png" alt="GUZZOCORP" class="logo">
+        <span class="logo-text">GUZZO CORPORATION</span>
+    </div>
+<nav>
+    <a href="inicio.html"><i class="fas fa-home"></i> Inicio</a>
+    <a href="index.html"><i class="fas fa-tshirt"></i> Tienda</a>
+    <a href="catalogo.html"><i class="fas fa-search"></i> Catálogo</a>
+    <a href="encargos.html"><i class="fas fa-star"></i> Encargos</a>
+    <a href="#contacto"><i class="fas fa-envelope"></i> Contacto</a>
+</nav>
+    <div class="mobile-menu-btn">
+        <i class="fas fa-bars"></i>
+    </div>
+</header>
     
     <div class="personalizar-container">
         <h1 class="titulo-centrado">Personaliza tu compra</h1>
