--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -41,6 +41,16 @@
                 <p id="producto-descripcion" class="descripcion"></p>
                 
                 <form id="form-compra">
+                            <!-- Nuevo selector de calidad -->
+        <div class="selector">
+            <label for="calidad">Calidad:</label>
+            <select id="calidad" name="calidad" required>
+                <option value="">Seleccionar</option>
+                <option value="premium">Calidad Premium de Guzzo</option>
+                <option value="regular">Calidad Regular de Guzzo (Alta)</option>
+            </select>
+        </div>
+
                     <!-- Selección de talle -->
                     <div class="selector">
                         <label for="talle">Talle:</label>
