--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -46,8 +46,8 @@
             <label for="calidad">Calidad:</label>
             <select id="calidad" name="calidad" required>
                 <option value="">Seleccionar</option>
-                <option value="premium">Calidad Premium de Guzzo +19%</option>
-                <option value="regular">Calidad Regular de Guzzo (Calidad Alta)</option>
+                <option value="premium">Calidad Premium de Guzzo.Corp +19%</option>
+                <option value="regular">Calidad Regular de Guzzo.Corp (Calidad Alta)</option>
             </select>
         </div>
 
@@ -270,10 +270,10 @@ function enviarWhatsApp(e) {
     
     // Calcular precios según calidad (19% más para premium)
     let precioBase = producto.price;
-    let calidadTexto = 'Regular de Guzzo (Alta Calidad)';
+    let calidadTexto = 'Regular de Guzzo.Corp (Alta Calidad)';
     if (calidad === "premium") {
         precioBase = Math.round(producto.price * 1.19); // 19% más para calidad premium
-        calidadTexto = 'Premium de Guzzo (+19%)';
+        calidadTexto = 'Premium de Guzzo.Corp (+19%)';
     }
     
     // Calcular descuentos
