--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -46,8 +46,8 @@
             <label for="calidad">Calidad:</label>
             <select id="calidad" name="calidad" required>
                 <option value="">Seleccionar</option>
-                <option value="premium">Calidad Premium de Guzzo +19%</option>
-                <option value="regular">Calidad Regular de Guzzo (Calidad Alta)</option>
+                <option value="premium">Calidad Premium de Guzzo (+19%)</option>
+                <option value="regular">Calidad Regular de Guzzo (Alta Calidad)</option>
             </select>
         </div>
 
