--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -48,14 +48,14 @@
             <i class="fas fa-tags"></i>
             <div>
                 <h4>¡Más compras, más ahorro!</h4>
-                <p>2 productos: 3% OFF • 3+ productos: 10% OFF</p>
+                <p>2 productos: 3% OFF | 3+ productos: 10% OFF</p>
             </div>
         </div>
         <div class="beneficio-item">
             <i class="fas fa-money-bill-wave"></i>
             <div>
-                <h4>Efectivo: 10% extra</h4>
-                <p>Pagando en efectivo o transferencia</p>
+                <h4>Efectivo: 10% de Descuento</h4>
+                <p>Pagando en efectivo</p>
             </div>
         </div>
     </div>
