remera manga corta

--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -338,7 +338,7 @@
         
         function obtenerProducto(id) {
             const productos = {
-                1: { name: "Remera Térmica", price: 14999, image: "Termica.jpeg", sizes: ["S", "M", "L", "XL", "XXL"], colors: ["Negro"] },
+                1: { name: "Remera Térmica Manga Corta", price: 14999, image: "Termica.jpeg", sizes: ["S", "M", "L", "XL", "XXL"], colors: ["Negro"] },
                 2: { name: "Gorra", price: 24999, image: "Gorras.jpeg", sizes: ["Único"], colors: ["Negro", "Azul"] },
             };
             return productos[id];
