--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
         <div class="product-card">
             <span class="tag-discount">20% OFF</span>
             <div class="product-image-container">
-                <img src="Cuellito.jpeg" alt="Cuellos de Lycra Frizada" class="product-image">
+                <img src="Cuellito.jpeg" alt="Cuellos Termicos" class="product-image">
             </div>
             <div class="product-info">
-                <h3>Cuellos de Lycra Frizada</h3>
+                <h3>Cuellos Termicos</h3>
                 <div class="price-container">
                     <p class="old-price">$5.000</p>
                     <p class="price">$3.999</p>
