--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -340,7 +340,7 @@ function obtenerProducto(id) {
     const productos = {
         1: { name: "Remera Térmica", price: 14999, image: "Termica.jpeg", sizes: ["S", "M", "L", "XL"], colors: ["Negro"] },
         2: { name: "Gorra", price: 21999, image: "Gorras.jpeg", sizes: ["Ajustable"], colors: ["Negro", "Azul"] },
-        3: { name: "Cuellos Lycra Frizada", price: 3999, image: "Cuellito.jpeg", sizes: ["Único"], colors: ["Negro"] },
+        3: { name: "Cuellos Termicos", price: 3999, image: "Cuellito.jpeg", sizes: ["Único"], colors: ["Negro"] },
         4: { name: "Remera Oversize Negra", price: 18999, image: "assets/products/remera-oversize-negra.jpg", sizes: ["S", "M", "L", "XL"], colors: ["Negro"] },
         5: { name: "Buzo Canguro Tela Peluche", price: 17000, image: "buzopeluche.jpg", sizes: ["S-M", "L-XL", "2XL-3XL"], colors: ["Gris"] },
         6: { name: "Buzo Canguro Negro", price: 29999, image: "assets/products/buzo-canguro-negro.jpg", sizes: ["S", "M", "L", "XL"], colors: ["Negro"] },
