--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
                 <img src="assets/products/remera-oversize-negra.jpg" alt="Remera Oversize Negra" class="product-image">
             </div>
             <div class="product-info">
-                <h3>Remera Oversize Negra</h3>
-                <p class="price">$18.999</p>
+                <h3>Cargo Baggy</h3>
+                <p class="price">$37.999</p>
                 <p class="size">Talles: S a XXL</p>
                 <p class="custom-notice">¡Personaliza tu diseño!</p>
                 <button onclick="window.location.href='personalizar-compra.html?producto=4'" class="btn-comprar">
@@ -175,7 +175,7 @@
                 <img src="assets/products/remera-oversize-blanca.jpg" alt="Remera Oversize Blanca" class="product-image">
             </div>
             <div class="product-info">
-                <h3>Remera Oversize Blanca</h3>
+                <h3>Remera Oversize</h3>
                 <p class="price">$18.999</p>
                 <p class="size">Talles: S a XXL</p>
                 <p class="custom-notice">¡Personaliza tu diseño!</p>
@@ -192,7 +192,7 @@
                 <img src="assets/products/buzo-canguro-negro.jpg" alt="Buzo Canguro Negro" class="product-image">
             </div>
             <div class="product-info">
-                <h3>Buzo Canguro Negro</h3>
+                <h3>Buzo Canguro</h3>
                 <p class="price">$29.999</p>
                 <p class="size">Talles: M a XL</p>
                 <p class="custom-notice">¡Personaliza tu diseño!</p>
