--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div class="product-info">
                 <h3>DC Court Graffick Rosas</h3>
                 <p class="price">$199.999</p>
-                <p class="size">Talle 38 - Originales</p>
+                <p class="size">Originales</p>
                 <p class="stock-warning">¡Exclusivas en San Luis!</p>
                 <button onclick="window.location.href='encargos.html'" class="btn-encargar">
                     <i class="fas fa-star"></i> ENCARGAR
@@ -138,7 +138,7 @@
             <div class="product-info">
                 <h3>Puma 180</h3>
                 <p class="price">$169.999</p>
-                <p class="size">Talle 40 - Originales</p>
+                <p class="size">Originales</p>
                 <p class="stock-warning">¡Edición limitada!</p>
                 <button onclick="window.location.href='encargos.html'" class="btn-encargar">
                     <i class="fas fa-star"></i> ENCARGAR
