--- a/personalizar-compra.html
+++ b/personalizar-compra.html
@@ -341,28 +341,29 @@ function obtenerProducto(id) {
         1: { name: "Remera Térmica", price: 14999, image: "Termica.jpeg", sizes: ["S", "M", "L", "XL"], colors: ["Negro"] },
         2: { name: "Gorra", price: 21999, image: "Gorras.jpeg", sizes: ["Ajustable"], colors: ["Negro", "Azul"] },
         3: { name: "Cuellos Termicos", price: 3999, image: "Cuellito.jpeg", sizes: ["Único"], colors: ["Negro"] },
-        4: { name: "Remera Oversize Negra", price: 18999, image: "assets/products/remera-oversize-negra.jpg", sizes: ["S", "M", "L", "XL"], colors: ["Negro"] },
-        5: { name: "Buzo Canguro Tela Peluche", price: 17000, image: "buzopeluche.jpg", sizes: ["S-M", "L-XL", "2XL-3XL"], colors: ["Gris"] },
-        6: { name: "Buzo Canguro Negro", price: 29999, image: "assets/products/buzo-canguro-negro.jpg", sizes: ["S", "M", "L", "XL"], colors: ["Negro"] },
-        7: { name: "Jeans Rotos Oversize", price: 28999, image: "https://example.com/jeans-rotos.jpg", sizes: ["28", "30", "32", "34"], colors: ["Azul"] },
-        8: { name: "Campera Denim", price: 45999, image: "camperadenim.jpeg", sizes: ["S", "M", "L", "XL"], colors: ["Azul"] },
-        9: { name: "Calza One Leg", price: 19999, image: "assets/products/calza-one-leg.jpg", sizes: ["S", "M", "L", "XL"], colors: ["Negro"] },
-        10: { name: "Calza Larga", price: 24999, image: "assets/products/calza-larga.jpg", sizes: ["S", "M", "L", "XL"], colors: ["Negro"] },
-        11: { name: "Calza Corta Deportiva Mujer", price: 7999, image: "assets/products/calza-corta-mujer.jpg", sizes: ["XS", "S", "M", "L"], colors: ["Negro"] },
-        12: { name: "Botas Bucaneras", price: 39000, image: "botasbucaneras.jpeg", sizes: ["36", "37", "38", "39", "40"], colors: ["Negro"] },
-        13: { name: "Borcegos Veganos Plataforma", price: 43000, image: "assets/products/borcegos-veganos.jpg", sizes: ["35", "36", "37", "38", "39", "40"], colors: ["Negro"] },
-        14: { name: "Remera oversize 2Pac (All Eyez On Me)", price: 29000, image: "assets/products/remera-2pac.jpg", sizes: ["M", "L", "XL"], colors: ["Negro"] },
-        15: { name: "Pantalón cargo alto con strass", price: 71000, image: "assets/products/pantalon-cargo-strass.jpg", sizes: ["S", "M", "L", "XL"], colors: ["Fucsia", "Verde"] },
-        16: { name: "Remera con malla transparente", price: 20000, image: "assets/products/remera-malla.jpg", sizes: ["S", "M"], colors: ["Blanco"] },
-        17: { name: "Conjunto - Nike Tech Fleece", price: 150000, image: "conjuntonikee.jpg", sizes: ["L", "XL", "XXL"], colors: ["Negro"] },
-        18: { name: "Campera Puffer Acolchonada", price: 48000, image: "camperapuff.jpeg", sizes: ["S", "M", "L"], colors: ["Negro"] },
-        19: { name: "Top oversize algodón (manga larga)", price: 12000, image: "topoversize.jpeg", sizes: ["S", "M"], colors: ["Negro"] },
-        20: { name: "Top satén liso con Tirantes Finos", price: 21000, image: "assets/products/top-saten.jpg", sizes: ["S", "M"], colors: ["Negro", "Rojo"] },
-        21: { name: "Jogging Oversize Lycra Deportivo", price: 71000, image: "assets/products/jogging-lycra.jpg", sizes: ["S", "M", "L"], colors: ["Negro"] },
-        22: { name: "Remera estampado Animal sobre blanco", price: 25000, image: "assets/products/remera-animal.jpg", sizes: ["S", "M", "L"], colors: ["Blanco"] },
-        23: { name: "Jean wide leg Animal Print", price: 47000, image: "assets/products/jean-animal.jpg", sizes: ["36", "37", "38", "39", "40", "41", "42", "43", "44", "45", "46"], colors: ["Blanco", "Negro"] },
-        24: { name: "Sweater Oversize Estampado Cebra", price: 45000, image: "assets/products/sweater-cebra.jpg", sizes: ["3XL"], colors: ["Verde"] },
-        25: { name: "Top Bandeau Plisado sin Tirantes", price: 18000, image: "assets/products/top-bandeau.jpg", sizes: ["S", "M"], colors: ["Rosa"] },
+        4: { name: "Pantalon Cargo Baggy", price: 29999, image: "cargobaggy.jpeg", sizes: ["38", "39", "40", "41", "42", "43", "44"], colors: ["Negro"] },
+        5: { name: "Remera Oversize", price: 18999, image: "remeraoversize.jpeg", sizes: ["S", "M", "L", "XL"], colors: ["Negro", "Blanco"] },
+        6: { name: "Buzo Canguro Tela Peluche", price: 17000, image: "buzopeluche.jpg", sizes: ["S-M", "L-XL", "2XL-3XL"], colors: ["Gris"] },
+        7: { name: "Buzo Canguro Negro", price: 29999, image: "assets/products/buzo-canguro-negro.jpg", sizes: ["S", "M", "L", "XL"], colors: ["Negro"] },
+        8: { name: "Jeans Rotos Oversize", price: 28999, image: "https://example.com/jeans-rotos.jpg", sizes: ["28", "30", "32", "34"], colors: ["Azul"] },
+        9: { name: "Campera Denim", price: 45999, image: "camperadenim.jpeg", sizes: ["S", "M", "L", "XL"], colors: ["Azul"] },
+        10: { name: "Calza One Leg", price: 19999, image: "assets/products/calza-one-leg.jpg", sizes: ["S", "M", "L", "XL"], colors: ["Negro"] },
+        11: { name: "Calza Larga", price: 24999, image: "assets/products/calza-larga.jpg", sizes: ["S", "M", "L", "XL"], colors: ["Negro"] },
+        12: { name: "Calza Corta Deportiva Mujer", price: 7999, image: "assets/products/calza-corta-mujer.jpg", sizes: ["XS", "S", "M", "L"], colors: ["Negro"] },
+        13: { name: "Botas Bucaneras", price: 39000, image: "botasbucaneras.jpeg", sizes: ["36", "37", "38", "39", "40"], colors: ["Negro"] },
+        14: { name: "Borcegos Veganos Plataforma", price: 43000, image: "assets/products/borcegos-veganos.jpg", sizes: ["35", "36", "37", "38", "39", "40"], colors: ["Negro"] },
+        15: { name: "Remera oversize 2Pac (All Eyez On Me)", price: 29000, image: "assets/products/remera-2pac.jpg", sizes: ["M", "L", "XL"], colors: ["Negro"] },
+        16: { name: "Pantalón cargo alto con strass", price: 71000, image: "assets/products/pantalon-cargo-strass.jpg", sizes: ["S", "M", "L", "XL"], colors: ["Fucsia", "Verde"] },
+        17: { name: "Remera con malla transparente", price: 20000, image: "assets/products/remera-malla.jpg", sizes: ["S", "M"], colors: ["Blanco"] },
+        18: { name: "Conjunto - Nike Tech Fleece", price: 150000, image: "conjuntonikee.jpg", sizes: ["L", "XL", "XXL"], colors: ["Negro"] },
+        19: { name: "Campera Puffer Acolchonada", price: 48000, image: "camperapuff.jpeg", sizes: ["S", "M", "L"], colors: ["Negro"] },
+        20: { name: "Top oversize algodón (manga larga)", price: 12000, image: "topoversize.jpeg", sizes: ["S", "M"], colors: ["Negro"] },
+        21: { name: "Top satén liso con Tirantes Finos", price: 21000, image: "assets/products/top-saten.jpg", sizes: ["S", "M"], colors: ["Negro", "Rojo"] },
+        22: { name: "Jogging Oversize Lycra Deportivo", price: 71000, image: "assets/products/jogging-lycra.jpg", sizes: ["S", "M", "L"], colors: ["Negro"] },
+        23: { name: "Remera estampado Animal sobre blanco", price: 25000, image: "assets/products/remera-animal.jpg", sizes: ["S", "M", "L"], colors: ["Blanco"] },
+        24: { name: "Jean wide leg Animal Print", price: 47000, image: "assets/products/jean-animal.jpg", sizes: ["36", "37", "38", "39", "40", "41", "42", "43", "44", "45", "46"], colors: ["Blanco", "Negro"] },
+        26: { name: "Sweater Oversize Estampado Cebra", price: 45000, image: "assets/products/sweater-cebra.jpg", sizes: ["3XL"], colors: ["Verde"] },
+        27: { name: "Top Bandeau Plisado sin Tirantes", price: 18000, image: "assets/products/top-bandeau.jpg", sizes: ["S", "M"], colors: ["Rosa"] },
     };
     return productos[id];
 }        
