--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     
  <!-- Ofertas Únicas -->
 <section id="ofertas" class="products">
-    <h2 class="section-title"><span class="blue-accent">OFERTAS</span> <span class="text-light">ÚNICAS</span></h2>
+    <h2 class="section-title"><span class="blue-accent">PROMOS Y OFERTAS</span> <span class="text-light">ÚNICAS</span></h2>
     
     <div class="product-grid">
         <!-- Producto 1 -->
