--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                     <p class="price">$3.999</p>
                 </div>
                 <p class="size">Talle Único</p>
-                <button onclick="window.location.href='personalizar-compra.html?producto=3'" class="btn-comprar">
-                    <i class="fas fa-shopping-cart"></i> COMPRAR
+                <button class="whatsapp-btn" onclick="buyViaWhatsapp('Promocion 5 Cuellos Termicos', 15000, 'https://guzzocorp.com.ar/Termica.jpeg')">
+                    <i class="fab fa-whatsapp"></i> COMPRAR
                 </button>
             </div>
         </div>
