--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
                 <img src="Cuellito.jpeg" alt="Cuellos Termicos" class="product-image">
             </div>
             <div class="product-info">
-                <h3>Cuellos Termicos</h3>
+                <h3>Cinco Cuellos Termicos</h3>
                 <div class="price-container">
-                    <p class="old-price">$5.000</p>
-                    <p class="price">$3.999</p>
+                    <p class="old-price">$5.000 C/U</p>
+                    <p class="price">$3.000 C/U</p>
                 </div>
                 <p class="size">Talle Único</p>
                 <button class="whatsapp-btn" onclick="buyViaWhatsapp('Promocion 5 Cuellos Termicos', 15000, 'https://guzzocorp.com.ar/Termica.jpeg')">
