--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                     <p class="price">$21.999</p>
                 </div>
                 <p class="size">Ajustable</p>
-                <button onclick="window.location.href='personalizar-compra.html?producto=2'" class="btn-comprar">
-                    <i class="fas fa-shopping-cart"></i> COMPRAR
+                <button class="whatsapp-btn" onclick="buyViaWhatsapp('Gorra (45% OFF)', 21999, 'https://guzzocorp.com.ar/Gorras.jpeg')">
+                    <i class="fab fa-whatsapp"></i> COMPRAR
                 </button>
             </div>
         </div>
@@ -93,7 +93,7 @@
                 <img src="Cuellito.jpeg" alt="Cuellos Termicos" class="product-image">
             </div>
             <div class="product-info">
-                <h3>Cinco Cuellos Termicos</h3>
+                <h3>Cinco Cuellos Termicos (x 5 unidades)</h3>
                 <div class="price-container">
                     <p class="old-price">$5.000 C/U</p>
                     <p class="price">$3.000 C/U</p>
