--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <img src="assets/products/remera-oversize-negra.jpg" alt="Remera Oversize Negra" class="product-image">
             </div>
             <div class="product-info">
-                <h3>Cargo Baggy</h3>
+                <h3>Pantalon Cargo Baggy</h3>
                 <p class="price">$29.999</p>
                 <p class="size">Talles: S a XXL</p>
                 <p class="custom-notice">¡Personaliza tu diseño!</p>
