--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                     <p class="price">$21.999</p>
                 </div>
                 <p class="size">Ajustable</p>
-                <button class="whatsapp-btn" onclick="buyViaWhatsapp('Gorra (45% OFF)', 21999, 'https://guzzocorp.com.ar/Gorras.jpeg')">
-                    <i class="fab fa-whatsapp"></i> COMPRAR
+                <button onclick="window.location.href='personalizar-compra.html?producto=2'" class="btn-comprar">
+                    <i class="fas fa-shopping-cart"></i> COMPRAR
                 </button>
             </div>
         </div>
@@ -99,8 +99,8 @@
                     <p class="price">$3.000 C/U</p>
                 </div>
                 <p class="size">Talle Único</p>
-                <button class="whatsapp-btn" onclick="buyViaWhatsapp('Promocion 5 Cuellos Termicos', 15000, 'https://guzzocorp.com.ar/Termica.jpeg')">
-                    <i class="fab fa-whatsapp"></i> COMPRAR
+                <button onclick="window.location.href='personalizar-compra.html?producto=3'" class="btn-comprar">
+                    <i class="fas fa-shopping-cart"></i> COMPRAR
                 </button>
             </div>
         </div>
