--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <img src="Cuellito.jpeg" alt="Cuellos Termicos" class="product-image">
             </div>
             <div class="product-info">
-                <h3>Cinco Cuellos Termicos (x 5 unidades)</h3>
+                <h3>Cuellos Termicos (x 5 unidades)</h3>
                 <div class="price-container">
                     <p class="old-price">$5.000 C/U</p>
                     <p class="price">$3.000 C/U</p>
@@ -152,7 +152,7 @@
 <section id="ropa" class="products">
     <h2 class="section-title"><span class="blue-accent">STREETWEAR</span> <span class="text-light">COLLECTION</span></h2>
     <div class="product-grid">
-        <!-- Producto 1 - Remera Oversize Negra -->
+        <!-- Producto 1 - Pantalon Cargo Baggy -->
         <div class="product-card">
             <span class="tag-bestseller">MÁS VENDIDO</span>
             <div class="product-image-container">
@@ -169,7 +169,7 @@
             </div>
         </div>
         
-        <!-- Producto 2 - Remera Oversize Blanca -->
+        <!-- Producto 2 - Remera Oversize -->
         <div class="product-card">
             <div class="product-image-container">
                 <img src="assets/products/remera-oversize-blanca.jpg" alt="Remera Oversize Blanca" class="product-image">
@@ -196,7 +196,7 @@
                 <p class="price">$29.999</p>
                 <p class="size">Talles: M a XL</p>
                 <p class="custom-notice">¡Personaliza tu diseño!</p>
-                <button onclick="window.location.href='personalizar-compra.html?producto=6'" class="btn-comprar">
+                <button onclick="window.location.href='personalizar-compra.html?producto=7'" class="btn-comprar">
                     <i class="fas fa-shopping-cart"></i> COMPRAR
                 </button>
             </div>
